fixed overflow bug

--- a/css/style.css
+++ b/css/style.css
@@ -111,11 +111,11 @@ body {
   display: inline;
 }
 
-.block > ul {
+ul {
   padding-left: 10px;
 }
 
-.block > li, .text {
+li, .text {
   margin-left: 5px;
 }
 
